added what i do section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,10 +41,15 @@ p {
   border: 2px solid var(--primary-color);
   margin: 0 5px;
 }
-.title {
+.section-title {
   color: var(--dark);
   font-size: 3rem;
   font-weight: 800;
+  text-align: center;
+}
+.section-description {
+  text-align: center;
+  margin: 20px auto;
 }
 
 /* Nav Style */
@@ -124,14 +129,29 @@ main {
   border-radius: 10px;
   padding: 100px;
 }
-.about .about-content {
-  margin: 20px 0;
-}
-.about .about-info {
+.about .about-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
-.about .about-info .info label {
+.about .about-container .info label {
   font-size: 1.2rem;
   color: var(--dark-30);
+}
+/* What I Do Section */
+.skills-container {
+  display: flex;
+  gap: 30px;
+  margin: 50px 0;
+}
+.skills-container .skill {
+  background-color: var(--white);
+  box-shadow: 0px 6px 50px 0 rgb(0, 0, 0, .06);
+  padding: 20px;
+}
+.skills-container .skill h4 {
+  font-size: 1.3rem;
+  margin: 20px 0;
+}
+.skills-container .skill p {
+  font-size: 1rem;
 }
