--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,10 @@
 }
 p {
   color: var(--dark-30);
-  font-size: 1.1rem;
+  font-size: 1rem;
+}
+button {
+  cursor: pointer;
 }
 
 /* Common style */
@@ -194,4 +197,39 @@ main {
 .resume-item .description {
   font-size: 1rem;
 }
-/*  */
+.resume .download-cv {
+  text-align: center;
+  margin-top: 30px;
+}
+/* Footer Style */
+footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--bg-color);
+  padding: 100px 200px;
+  gap: 50px;
+}
+footer .footer-column {
+  width: 50%;
+}
+footer .footer-column .section-title,
+footer .footer-column .section-description {
+  text-align: left;
+}
+footer .footer-column .social-links a {
+  margin-right: 20px;
+}
+footer .contact-form {
+  margin-top: 20px;
+}
+footer .contact-form input, textarea {
+  color: var(--dark-20);
+  display: block;
+  padding: 16px 30px;
+  margin: 15px 0;
+  width: 100%;
+  border: none;
+}
+footer .contact-form > button {
+  margin-left: 0;
+}
